--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </g>
         </svg>
     </div><!-- .clockbox -->
-    <script src="script.js"></script>
+    <script src="script.js">
+        console.log("sdfasdas");
+    </script>
 </main>
 
 </body>
